@@ -14,13 +14,17 @@
 
     <dependencies>
 
-
-
         <dependency>
-            <groupId>com.googlecode.json-simple</groupId>
-            <artifactId>json-simple</artifactId>
-            <version>1.1.1</version>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
         </dependency>
+        
+        <dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.8.9</version>
+		</dependency>
 
         <!-- junit testing with jupiter -->
         <dependency>
@@ -45,29 +49,14 @@
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.0.0-M3</version>
-                <configuration>
-                    <includes>
-                        <include>**/*Test.java</include>
-                    </includes>
-                    <argLine>
-                        @{jaCoCoArgLine} --add-opens Stonk.data/stonk.data=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                    </argLine>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.apache.maven.surefire</groupId>
-                        <artifactId>surefire-junit47</artifactId>
-                        <version>3.0.0-M3</version>
-                    </dependency>
-                </dependencies>
-            </plugin>
+        		<artifactId>maven-surefire-plugin</artifactId>
+	        </plugin>
             <!-- Run the checkstyle code quality tool -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-checkstyle-plugin</artifactId>
             </plugin>
+
 
             <!-- Run the spotbugs code quality tool -->
             <plugin>
@@ -77,11 +66,8 @@
 
             <!-- Configure jacoco code coverage -->
             <plugin>
-                <groupId>org.jacoco</groupId>
+                <groupId>org.jacoco</groupId>   
                 <artifactId>jacoco-maven-plugin</artifactId>
-                 <configuration>
-                    <propertyName>jaCoCoArgLine</propertyName>
-                </configuration>
             </plugin>
 
 
